# slimetoy

./: Cargo.toml  README.md  build.rs
shaders/: mandelbrot.glsl  mul12.glsl
shaders/slime/: motion.glsl  trail_decay.glsl
src/: main.rs
