[package]
name = "slimetoy"
version = "0.1.0"
authors = ["Zachary Neely <zrussellneely@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.21"
vulkano-shaders = "0.21"
vulkano-win = "0.21"
winit = "0.24"
rand = "0.8.3"